2009-08-26    <piumarta@ubuntu.piumarta.com>

	* cmake/PluginInternal.cmake, cmake/PluginExternal.cmake: Remove
	CMAKE_REQUIRE_INCLUDES from include paths.

	* cmake/Plugins.cmake: Add PLUGIN_FIND and PLUGIN_REQUIRE macros.
	* cmake/Utils.cmake: Add macro LIST_APPEND.

2009-08-25    <piumarta@netbsd.piumarta.com>

	* plugins/SqueakFFIPrims/config.cmake: Check for libffi via
	pkf-config before eplicit search.

	* vm/config.cmake: Add includes and libraries from /usr/pkg if present.

	* cmake/PluginInternal.cmake, cmake/PluginExternal.cmake: Add
	CMAKE_REQUIRED_INCLUDES to plugin INCLUDE_DIRECTORIES.

	* cmake/Plugins.cmake: Add macros PLUGIN_DISABLE, PLUGIN_SOURCES,
	PLUGIN_DEFINITIONS, PLUGIN_INCLUDE_DIRECTORIES,
	PLUGIN_LINK_DIRECTORIES, PLUGIN_LINK_LIBRARIES.

	* cmake/PluginExternal.cmake, cmake/PluginInternal.cmake: Set
	definitions, include dirs and link dirs from configured values.
	Add link directories before defining target.

	* cmake/PluginExternal.cmake, cmake/Plugins.cmake,
	cmake/PluginInternal.cmake, plugins/PseudoTTYPlugin/config.cmake,
	plugins/PseudoTTYPlugin/build.cmake,
	plugins/RomePlugin/config.cmake,
	plugins/HostWindowPlugin/config.cmake,
	plugins/UUIDPlugin/config.cmake, plugins/AioPlugin/build.cmake,
	plugins/SqueakFFIPrims/config.cmake,
	plugins/SqueakFFIPrims/build.cmake,
	plugins/ImmX11Plugin/config.cmake, plugins/OggPlugin/config.cmake,
	plugins/B3DAcceleratorPlugin/config.cmake,
	plugins/B3DAcceleratorPlugin/build.cmake,
	plugins/UnixOSProcessPlugin/config.cmake,
	plugins/UnixOSProcessPlugin/build.cmake,
	plugins/GStreamerPlugin/config.cmake,
	plugins/DBusPlugin/config.cmake,
	plugins/XDisplayControlPlugin/config.cmake,
	plugins/XDisplayControlPlugin/build.cmake,
	vm-sound-ALSA/config.cmake, vm-sound-NAS/config.cmake,
	vm-display-X11/config.cmake, vm-display-X11/build.cmake,
	vm-sound-MacOSX/config.cmake, vm-display-fbdev/config.cmake,
	vm-display-Quartz/config.cmake, vm-display-Quartz/build.cmake,